2012-01-28  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/x86_64/fpu/math_private.h: Simplify use of AVX instructions.

2012-01-19  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/a2/memcpy.S: Fix for when cache line
	size is not set.
	* sysdeps/powerpc/powerpc64/a2/memcpy.S: Likewise.

2012-01-27  Ulrich Drepper  <drepper@gmail.com>

	[BZ #13618]
	* elf/dl-open.c (dl_open_worker): Sort objects by dependency before
	relocation.
	* Makeconfig (libm): Define.
	* elf/Makefile: Add rules to build and run tst-relsort1.
	* elf/tst-relsort1.c: New file.
	* elf/tst-relsort1mod1.c: New file.
	* elf/tst-relsort1mod2.c: New file.

2012-01-27  Joseph Myers  <joseph@codesourcery.com>

	* math/s_ldexp.c: Remove __STDC__ conditionals.
	* math/s_ldexpf.c: Likewise.
	* math/s_ldexpl.c: Likewise.
	* math/s_nextafter.c: Likewise.
	* math/s_nexttowardf.c: Likewise.
	* math/s_significand.c: Likewise.
	* math/s_significandf.c: Likewise.
	* math/s_significandl.c: Likewise.
	* math/w_jnl.c: Likewise.
	* sysdeps/i386/fpu/s_isinfl.c: Likewise.
	* sysdeps/i386/fpu/s_isnanl.c: Likewise.
	* sysdeps/i386/fpu/s_nextafterl.c: Likewise.
	* sysdeps/i386/fpu/s_nexttoward.c: Likewise.
	* sysdeps/i386/fpu/s_nexttowardf.c: Likewise.
	* sysdeps/ieee754/dbl-64/k_rem_pio2.c: Likewise.
	* sysdeps/ieee754/dbl-64/k_tan.c: Likewise.
	* sysdeps/ieee754/dbl-64/s_copysign.c: Likewise.
	* sysdeps/ieee754/dbl-64/s_erf.c: Likewise.
	* sysdeps/ieee754/dbl-64/s_fabs.c: Likewise.
	* sysdeps/ieee754/dbl-64/s_finite.c: Likewise.
	* sysdeps/ieee754/dbl-64/s_floor.c: Likewise.
	* sysdeps/ieee754/dbl-64/s_frexp.c: Likewise.
	* sysdeps/ieee754/dbl-64/s_ilogb.c: Likewise.
	* sysdeps/ieee754/dbl-64/s_isnan.c: Likewise.
	* sysdeps/ieee754/dbl-64/s_logb.c: Likewise.
	* sysdeps/ieee754/dbl-64/s_nearbyint.c: Likewise.
	* sysdeps/ieee754/dbl-64/s_tanh.c: Likewise.
	* sysdeps/ieee754/dbl-64/wordsize-64/s_isnan.c: Likewise.
	* sysdeps/ieee754/flt-32/e_acoshf.c: Likewise.