@@ -1,3 +1,9 @@
+2012-01-28  Chris Metcalf  <cmetcalf@tilera.com>
+
+	* include/sys/epoll.h: New file.
+	* sysdeps/unix/sysv/linux/epoll_pwait.c (epoll_pwait): Mark as
+	libc_hidden_def.
+
 2012-01-28  Ulrich Drepper  <drepper@gmail.com>
 
 	* sysdeps/x86_64/fpu/math_private.h: Simplify use of AVX instructions.
